# gazellemq_client

./: .gitignore  CMakeLists.txt  README.md
client_lib/: CMakeLists.txt
client_lib/include/: Client.hpp  PublisherClient.hpp  SubscriberClient.hpp
client_lib/include/MPMCQueue/: MPMCQueue.hpp
common/: Consts.hpp
publisher/: CMakeLists.txt  main.cpp
subscriber/: CMakeLists.txt  Random.hpp  main.cpp
